[Bug] The logo text is overflowing in small devices it should be truncate like mobile navigation.

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -57,3 +57,8 @@ main details:hover {
     grid-template-columns: 1fr 1fr;
   }
 }
+@media (max-width: 320px) {
+  .navbar__title {
+    width: 170px;
+  }
+}
